updates 2 yr old copyright (yikes) and fixes broken link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,9 @@
       <a href="https://github.com/savannahmillion" class="action-img"><i class="icon-github-with-circle"></i></a>
       <a href="http://codepen.io/savannahmillion/" class="action-img"><i class="icon-codepen-with-circle"></i></a>
       <a href="https://dribbble.com/savannahmillion" class="action-img"><i class="icon-dribbble-with-circle"></i></a>
-      <a href="http://www.rdio.com/people/savannahmillion/" class="action-img"><i class="icon-rdio-with-circle"></i></a>
-      <a href="https://vine.co/u/1203131589711060992" class="action-img"><i class="icon-vine-with-circle"></i></a>
       <a href="https://www.linkedin.com/in/savannahmillion" class="action-img"><i class="icon-linkedin-with-circle"></i></a>
     </div>
-    <p>&copy; {{ site.author }} 2015</p>
-    <p><a href="mailto:sav@nnah.rocks">sav@nnah.rocks</a></p>
+    <p>&copy; {{ site.author }} 2017</p>
+    <p><a href="mailto:savannahmillion@gmail.com">savannahmillion@gmail.com</a></p>
   </div>
 </footer>
